<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.valentino.journeyl.activity.CreateGoalActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/createGoalToolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimaryDark"
            app:titleTextColor="@color/white"
            app:title="New Goal"
            app:titleTextAppearance="@style/TitleText" />


        <android.support.v7.widget.CardView
            android:id="@+id/nameCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/createGoalToolbar"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardElevation="15dp"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="28sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nameTextView"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:ellipsize="none"
                    android:scrollHorizontally="false"
                    android:inputType="text|textMultiLine"
                    android:background="@drawable/style_login_field"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/tagsCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameCardView"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardElevation="15dp"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tagsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tags"
                    android:textSize="28sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/tagsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tagsTextView"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:ellipsize="none"
                    android:scrollHorizontally="false"
                    android:inputType="text|textMultiLine"
                    android:background="@drawable/style_login_field"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/createButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_goal"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

        </android.support.v7.widget.CardView>


    </RelativeLayout>




</android.support.design.widget.CoordinatorLayout>
